Mon Jul 20 07:51:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Sequence_Unit_Tests/string_sequence_tester.hpp:
          Fixed warnings on Solaris

Sun Jul 19 10:20:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/component_svs.cpp:
          Fixed compile warnings on HPUX

Thu Jul 16 00:41:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        Reverted this change, it breaks other platforms

        Wed Jul 15 16:10:28 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
        * TAO_IDL/be/be_helper.cpp:
        * TAO_IDL/be_include/be_helper.h:
          Fix for compile error on OS X.

Wed Jul 15 22:24:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/component_exh.cpp
        * TAO_IDL/be/be_visitor_component/component_exs.cpp
        * TAO_IDL/be/be_visitor_home/home_exh.cpp
        * TAO_IDL/be/be_visitor_home/home_exs.cpp
        * TAO_IDL/be/be_visitor_home/home_svh.cpp
        * TAO_IDL/be/be_visitor_home/home_svs.cpp
          Merged in some fixes from Jeff from the dds_ports branch to resolve
          compile warnings

Wed Jul 15 16:10:28 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/be/be_helper.cpp:
        * TAO_IDL/be_include/be_helper.h:

          Fix for compile error on OS X.

Wed Jul 15 13:24:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/Makefile.am:
          Updated with all recent changes

Tue Jul 14 20:46:18 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/contrib/mcpp/system.cpp:

          Further warning fixes.

Tue Jul 14 20:32:34 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/component_exs.cpp:

          Roll back commented out port provider, while a good idea in theory,
          causes warnings in generated code which may be part of the automated
          build.
