@@ -39,28 +39,30 @@ static const char copyright[] =
 "// -*- C++ -*-\n"
 "//\n"
 "// $I" "d$\n\n"
-"// ****  Code generated by the The ACE ORB (TAO) IDL Compiler v" TAO_VERSION " ****\n"
-"// TAO and the TAO IDL Compiler have been developed by:\n"
-"//       Center for Distributed Object Computing\n"
-"//       Washington University\n"
-"//       St. Louis, MO\n"
-"//       USA\n"
-"//       http://www.cs.wustl.edu/~schmidt/doc-center.html\n"
-"// and\n"
-"//       Distributed Object Computing Laboratory\n"
-"//       University of California at Irvine\n"
-"//       Irvine, CA\n"
-"//       USA\n"
-"//       http://doc.ece.uci.edu/\n"
-"// and\n"
-"//       Institute for Software Integrated Systems\n"
-"//       Vanderbilt University\n"
-"//       Nashville, TN\n"
-"//       USA\n"
-"//       http://www.isis.vanderbilt.edu/\n"
-"//\n"
-"// Information about TAO is available at:\n"
-"//     http://www.cs.wustl.edu/~schmidt/TAO.html";
+"/**\n"
+" * Code generated by the The ACE ORB (TAO) IDL Compiler v" TAO_VERSION "\n"
+" * TAO and the TAO IDL Compiler have been developed by:\n"
+" *       Center for Distributed Object Computing\n"
+" *       Washington University\n"
+" *       St. Louis, MO\n"
+" *       USA\n"
+" *       http://www.cs.wustl.edu/~schmidt/doc-center.html\n"
+" * and\n"
+" *       Distributed Object Computing Laboratory\n"
+" *       University of California at Irvine\n"
+" *       Irvine, CA\n"
+" *       USA\n"
+" *       http://doc.ece.uci.edu/\n"
+" * and\n"
+" *       Institute for Software Integrated Systems\n"
+" *       Vanderbilt University\n"
+" *       Nashville, TN\n"
+" *       USA\n"
+" *       http://www.isis.vanderbilt.edu/\n"
+" *\n"
+" * Information about TAO is available at:\n"
+" *     http://www.cs.wustl.edu/~schmidt/TAO.html\n"
+" **/";
 
 TAO_NL::TAO_NL (void)
 {
